# cvmfs

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  CITATION.cff  CMakeLists.txt  ChangeLog  README.md  bootstrap.sh
.github/scripts/: clang_matcher.json
.github/workflows/: ci.yml  ci_ducc.yml  ci_gateway.yml  ci_macos.yml  ci_snapshotter.yml  ci_ubuntu.yaml  ci_ubuntu_unittest.yaml  linter.yaml  rpmlint.yaml  test_cvmfs_server.yml
add-ons/: find_zombie.cc  test_libcvmfs.cc  treesize.cc
add-ons/tools/: download_catalog_graph.py  get_info.py  get_referenced_hashes.py  get_root_hash.py  list_catalogs.py  open_history.py  open_root_catalog.py
ci/: build_cvmfs_sourcetarball.sh  build_install_builddeps.sh  build_package.sh  bump_version.sh  common.sh
ci/cvmfs/: container.sh  deb.sh  pkg.sh  rpm.sh  snapshotter.sh
ci/cvmfs-config/: deb.sh
ci/cvmfs-release/: deb.sh  rpm.sh
cmake/Modules/: FindFUSE3.cmake  FindLibACL.cmake  cvmfs_options.cmake
cvmfs/: CMakeLists.txt  acl.cc  acl.h  auto_umount.cc  backoff.cc  backoff.h  bigqueue.h  bigvector.h  cache.cc  cache.h  cache_extern.cc  cache_extern.h  cache_posix.cc  cache_posix.h  cache_ram.cc  cache_ram.h  cache_stream.cc  cache_stream.h  cache_tiered.cc  cache_tiered.h  cache_transport.cc  cache_transport.h  catalog.cc  catalog.h  catalog_balancer.h  catalog_balancer_impl.h  catalog_counters.cc  catalog_counters.h  catalog_counters_impl.h  catalog_diff_tool.h  catalog_diff_tool_impl.h  catalog_downloader.cc  catalog_downloader.h  catalog_mgr.h  catalog_mgr_client.cc  catalog_mgr_client.h  catalog_mgr_impl.h  catalog_mgr_ro.cc  catalog_mgr_ro.h  catalog_mgr_rw.cc  (+239 more)
cvmfs/authz/: authz_curl.cc  authz_curl.h  authz_fetch.cc  authz_fetch.h  authz_session.cc  authz_session.h  helper_log.cc  helper_log.h  helper_util.cc
cvmfs/cache_plugin/: channel.cc  channel.h  cvmfs_cache_null.cc  cvmfs_cache_posix.cc  cvmfs_cache_ram.cc  libcvmfs_cache.cc  libcvmfs_cache.h  libcvmfs_cache_options.cc
cvmfs/compression/: compression.cc  compression.h
cvmfs/crypto/: crypto_util.cc  encrypt.cc  encrypt.h  hash.cc  hash.h  openssl_version.h  signature.cc  signature.h
cvmfs/file_processing/: chunk.h  file.cc
cvmfs/garbage_collection/: garbage_collector.h  garbage_collector_impl.h  gc_aux.h  gc_aux_impl.h  hash_filter.h
cvmfs/ingestion/: chunk_detector.cc  chunk_detector.h  ingestion_source.h  item.cc  item.h  item_mem.cc  pipeline.cc  pipeline.h  task.h  task_chunk.cc  task_chunk.h  task_compress.cc  task_compress.h  task_hash.cc  task_hash.h  task_read.cc  task_read.h  task_register.cc  task_register.h  task_write.cc  task_write.h
cvmfs/network/: dns.cc  dns.h  download.cc  download.h  health_check.h  jobinfo.cc  jobinfo.h  s3fanout.cc  s3fanout.h  sharding_policy.h  sink.h  sink_file.cc  sink_file.h  sink_mem.cc  sink_mem.h  sink_path.cc  sink_path.h
cvmfs/notify/: cmd_pub.cc  cmd_pub.h  cmd_sub.cc  cmd_sub.h  messages.cc  messages.h  publisher.cc  publisher.h  publisher_http.cc  publisher_http.h  subscriber.h  subscriber_sse.cc  subscriber_sse.h  subscriber_supervisor.cc  subscriber_supervisor.h
cvmfs/path_filters/: dirtab.cc  dirtab.h  relaxed_path_filter.cc  relaxed_path_filter.h
cvmfs/pathspec/: pathspec.cc  pathspec.h  pathspec_pattern.cc  pathspec_pattern.h
cvmfs/pkg/: apparmor.local.fusermount3  cvmfs-reload.service
cvmfs/publish/: cmd_abort.cc  cmd_abort.h  cmd_commit.cc  cmd_commit.h  cmd_diff.cc  cmd_diff.h  cmd_enter.cc  cmd_enter.h  cmd_hash.cc  cmd_hash.h  cmd_help.cc  cmd_info.cc  cmd_info.h  cmd_lsof.cc  cmd_lsof.h  cmd_mkfs.cc  cmd_mkfs.h  cmd_transaction.cc  cmd_transaction.h  cmd_util.cc  cmd_util.h  cmd_zpipe.cc  cmd_zpipe.h  command.cc  command.h  except.cc  except.h  main.cc  repository.cc  repository.h  repository_abort.cc  repository_diff.cc  repository_env.cc  repository_managed.cc  repository_session.cc  repository_tags.cc  repository_transaction.cc  repository_util.cc  repository_util.h  settings.cc  (+1 more)
cvmfs/receiver/: catalog_merge_tool.h  catalog_merge_tool_impl.h  commit_processor.cc  commit_processor.h  lease_path_util.cc  lease_path_util.h  params.cc  params.h  payload_processor.cc  payload_processor.h  reactor.cc  reactor.h  receiver.cc  session_token.cc  session_token.h
cvmfs/server/: cvmfs_server_apache.sh  cvmfs_server_check.sh  cvmfs_server_coda.sh  cvmfs_server_common.sh  cvmfs_server_gc.sh  cvmfs_server_ingest.sh  cvmfs_server_mkfs.sh  cvmfs_server_resign.sh  cvmfs_server_snapshot.sh  cvmfs_server_util.sh  test_cvmfs_server_util.sh
cvmfs/shrinkwrap/: fs_traversal.cc  fs_traversal.h  fs_traversal_interface.h  fs_traversal_libcvmfs.cc  shrinkwrap.cc  spec_tree.cc  spec_tree.h  util.cc  util.h
cvmfs/util/: algorithm.cc  algorithm.h  async.h  atomic.h  buffer.h  concurrency.cc  concurrency.h  concurrency_impl.h  exception.cc  exception.h  file_backed_buffer.cc  file_backed_buffer.h  file_guard.h  fs_traversal.h  future.h  logging.cc  logging.h  logging_internal.h  mmap_file.cc  mmap_file.h  mutex.h  namespace.cc  namespace.h  pipe.h  platform.h  platform_linux.h  platform_osx.h  plugin.h  pointer.h  posix.cc  posix.h  prng.h  raii_temp_dir.cc  raii_temp_dir.h  shared_ptr.h  single_copy.h  smalloc.h  string.cc  string.h  testing.h  (+3 more)
cvmfs/webapi/: cvmfs_geo.py  test-api.py
doc/developer/: 20-codestyle-and-git-contribution.md  31-caching-build-results.md  60-debugging-and-testing.md
doc/manpages/: CMakeLists.txt  cvmfs2.h2m  cvmfs_common.h2m  generate_manpage_cvmfs_server.sh  generate_manpage_cvmfs_swissknife.sh
ducc/: go.mod  go.sum
ducc/cmd/: check_image_syntax.go  check_image_syntax_test.go  convert.go  convert_single_image.go  expand-wildcard.go  (+7 more)
gateway/: go.mod  go.sum
mount/: auto.cvmfs.cc  mount.cvmfs.cc
snapshotter/: CMakeLists.txt  go.mod  go.sum  main.go
snapshotter/cvmfs/: cvmfs.go
snapshotter/script/config/etc/systemd/system/: cvmfs-snapshotter.service
test/: run.sh  test_functions
test/micro-benchmarks/: CMakeLists.txt  b_catalog_grafting.cc  b_compression.cc  b_hash.cc  b_messaging.cc  b_smallhash.cc  b_syscalls.cc  b_utils.cc  bm_util.h
(+283 files in other folders)
